Update Presidential SuperPAC tweets.ipynb

--- a/Presidential SuperPAC tweets.ipynb
+++ b/Presidential SuperPAC tweets.ipynb
@@ -30,10 +30,10 @@
     "import time \n",
     " \n",
     "#Twitter API credentials\n",
-    "consumer_key = \"Utzu9ZlB5JIAQveTLZb0tZlcL\"\n",
-    "consumer_secret = \"LDBa5sACpeC6kG8nn45Lf3XUc1Zf6gGt8OThOkF0HQcLl6qcE8\"\n",
-    "access_key = \"242240781-aeLS0l1NDyP2lF4F4SQx7NZQhZfGakmS1ltgyMi4\"\n",
-    "access_secret = \"TPyu1Pnz4EezdaF0DZVrjg4QEEiTU9FAN0urcJoQQvc94\"\n",
+    "consumer_key = \"XXXXXXXXXXXXX\"\n",
+    "consumer_secret = \"XXXXXXXXXXXXX\"\n",
+    "access_key = \"XXXXXXXXXXXXX\"\n",
+    "access_secret = \"XXXXXXXXXXXXX\"\n",
     " \n",
     "os.chdir('/home/stan/Documents/Presidential Tweet Data/')\n",
     "\n",
