Update Presidential SuperPAC tweets.ipynb

--- a/Presidential SuperPAC tweets.ipynb
+++ b/Presidential SuperPAC tweets.ipynb
@@ -35,10 +35,10 @@
     "access_key = \"XXXXXXXXXXXXX\"\n",
     "access_secret = \"XXXXXXXXXXXXX\"\n",
     " \n",
-    "os.chdir('/home/stan/Documents/Presidential Tweet Data/')\n",
+    "os.chdir('YOUR DIRECTORY GOES HERE')\n",
     "\n",
     "\n",
-    "df = pd.read_csv('PACTwitters-1.csv')\n",
+    "df = pd.read_csv('PACTwitters.csv')\n",
     "cand= df.SuperPAC_Twitter.astype(str).tolist()   \n",
     " \n",
     "def get_all_tweets(screen_name):\n",
