Update Presidential Tweet Grabber.ipynb

--- a/Presidential Tweet Grabber.ipynb
+++ b/Presidential Tweet Grabber.ipynb
@@ -214,15 +214,15 @@
     "import time \n",
     " \n",
     "#Twitter API credentials\n",
-    "consumer_key = \"Utzu9ZlB5JIAQveTLZb0tZlcL\"\n",
-    "consumer_secret = \"LDBa5sACpeC6kG8nn45Lf3XUc1Zf6gGt8OThOkF0HQcLl6qcE8\"\n",
-    "access_key = \"242240781-aeLS0l1NDyP2lF4F4SQx7NZQhZfGakmS1ltgyMi4\"\n",
-    "access_secret = \"TPyu1Pnz4EezdaF0DZVrjg4QEEiTU9FAN0urcJoQQvc94\"\n",
+    "consumer_key = \"XXXXXXXXXXXX\"\n",
+    "consumer_secret = \"XXXXXXXXXXXX\"\n",
+    "access_key = \"XXXXXXXXXXXX\"\n",
+    "access_secret = \"XXXXXXXXXXXX\"\n",
     " \n",
-    "os.chdir('/home/stan/Documents/Presidential Tweet Data/')\n",
+    "os.chdir('YOUR DIRECTORY HERE')\n",
     "\n",
     "\n",
-    "df = pd.read_csv('PresTwitters-1.csv')\n",
+    "df = pd.read_csv('PresTwitters.csv')\n",
     "cand= df.Twitter.astype(str).tolist()   \n",
     " \n",
     "def get_all_tweets(screen_name):\n",
