--- a/presidential_tweets.bib
+++ b/presidential_tweets.bib
@@ -440,12 +440,13 @@
   langid = {english}
 }
 
-@article{murthy_,
+@article{murthy_2015,
   title = {Twitter and Elections: {{Are}} Tweets, Predictive, Reactive, or a Form of Buzz?". {{Information}}},
   author = {Murthy, Dhiraj},
   journaltitle = {Communication \& Society},
   volume = {18},
   number = {7},
+  date={2015},
   pages = {816--31},
   langid = {english}
 }
